--- a/views/room.ejs
+++ b/views/room.ejs
@@ -39,6 +39,9 @@
           <div id="showChat" class="options__button">
             <i class="fa fa-comment"></i>
           </div>
+          <div id="screenShare" class="options__button">
+            <i class="fa-solid fa-screencast"></i>
+          </div>
         </div>
         <div class="options__right">
           <div id="inviteButton" class="options__button">
