--- a/views/room.ejs
+++ b/views/room.ejs
@@ -42,6 +42,12 @@
           <div id="screenShare" class="options__button">
             <i class="fa-solid fa-screencast"></i>
           </div>
+          <div id="endCall" class="options__button">
+            <i class="fa-solid fa-screencast"></i>
+          </div>
+          <div id="timer" class="" style="padding-left: 10px">
+            <h1 id = "t" style="color:white;">000</h1>
+          </div>
         </div>
         <div class="options__right">
           <div id="inviteButton" class="options__button">
